GNOME Bugzilla – Bug 746503
"has_boot_id" is not initialized
Last modified: 2015-03-26 16:46:58 UTC
In gl-journal.c, inside the function of gl_journal_set_matches, the boolean varaible has_boot_id is not initialized. It cause a unexpected error that even _BOOT_ID is not in @matches, it won't take events from this boot only.
Created attachment 299910 [details] [review] patch for this bug The variable has_boot_id should be initialized as FALSE. Here is the patch.
Review of attachment 299910 [details] [review]: Thanks for the patch! I pushed it to master and gnome-3-16 as 01793aef17c04d78354a99e668d15e318d7152f2 and 262f694e625abbe3441da17fcd4b6e5b839a0d31.