Give has_boot_id an initial value of FALSE

has_boot_id was not initialized, which may lead to an unexpacted error.
Give has_boot_id an initial value of FALSE to solve it.

https://bugzilla.gnome.org/show_bug.cgi?id=746503